.gitignore for themes & icons

--- a/themes/.gitignore
+++ b/themes/.gitignore
@@ -16,6 +16,7 @@ Sierra-light/
 Sierra-light-solid/
 Sierra-light-solid-thin/
 Sierra-light-thin/
+Iris Night/
 X-Arc-Darker/
 X-Arc-Plus/
 X-Arc-Shadow/
