--- a/icons/.gitignore
+++ b/icons/.gitignore
@@ -21,6 +21,7 @@ ComixCursors-Slim-Orange
 ComixCursors-Slim-Red
 ComixCursors-Slim-White
 ComixCursors-White
+capitaine-cursors/
 default
 'Equinox Evolution Dusk'
 la-capitaine-icon-theme
