TEST push in two git repo

--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -1,5 +1,6 @@
 # https://gist.github.com/bryanjswift/1525912
 # https://github.com/rakshasa/rtorrent/wiki/rTorrent-0.9-Comprehensive-Command-list-(WIP)
+# Test
 
 bind = 0.0.0.0
 
